tests/suite/errors/e53_byte_literal_non_ascii.rs
// err: non-ASCII characters are not allowed in byte literals

fn main() {
    let _: u8 = b'Ñ';
}
